# mkui

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
examples/standalone-json/: app.json
mkui/: __init__.py
mkui/static/examples/library-js/: index.html
mkui/static/examples/mkio-table/: mkio.toml  seed.py
mkui/static/examples/mkio-table/static/: app.json  index.html
mkui/static/examples/standalone-json/: app.json  index.html
mkui/static/src/: core.js  index.js  mkio-bridge.js
mkui/static/src/components/: app.js  frame.js  menubar.js  statusbar.js  workspace.js
mkui/static/src/layout/: drag.js  tree.js
mkui/static/src/widgets/: button.js  mkio-table.js  text.js
mkui/static/styles/: mkui.css
src/: mkio-bridge.js
src/components/: frame.js  menubar.js  statusbar.js  workspace.js
src/layout/: drag.js
src/widgets/: mkio-table.js
styles/: mkui.css
tests/: layout.test.js  state.test.js
